--- a/src/styles/layout/_home.scss
+++ b/src/styles/layout/_home.scss
@@ -24,12 +24,17 @@
   .home-content {
 
     margin: 5px auto;
+    text-align: center;
+    display: flex;
+  flex-direction: column;
+  align-items: center;
 
     input {
       font-size: 1.2rem;
       font-family: $font1;
       width: 100%;
       margin-bottom: 10px;
+      
     }
 
     button {
